--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -4,6 +4,8 @@ click==6.7
 Flask==0.12.1
 Flask-MySQLdb==0.2.0
 Flask-RESTful==0.3.5
+flask-sqlacodegen==1.1.6.1
+inflect==0.2.5
 itsdangerous==0.24
 Jinja2==2.9.6
 MarkupSafe==1.0
@@ -14,4 +16,5 @@ python-dateutil==2.6.0
 pytz==2017.2
 requests==2.13.0
 six==1.10.0
+SQLAlchemy==1.1.9
 Werkzeug==0.12.1
