--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -5,6 +5,8 @@ Flask==0.12.1
 Flask-MySQLdb==0.2.0
 Flask-RESTful==0.3.5
 flask-sqlacodegen==1.1.6.1
+Flask-SQLAlchemy==2.2
+geopy==1.11.0
 inflect==0.2.5
 itsdangerous==0.24
 Jinja2==2.9.6
